--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
 	<!-- bs js -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	<!-- particles js -->
-	<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-	<script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+	<script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
 	<script type="text/javascript" src="./index.js"></script>
 </body>
 </html>
