--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Art</title>
 	<script src="https://kit.fontawesome.com/dfa2db43a8.js" crossorigin="anonymous"></script>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lora&family=Roboto&display=swap" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="./index.css">
 </head>
@@ -45,8 +48,8 @@
 	  </div>
 	</nav>
 
-	<div class="container">
-		<div class="row mb-5 pb-3 justify-content-center align-items-center" id="landing">
+	<div class="container pb-5">
+		<div class="row mb-5 py-5 justify-content-center align-items-center" id="landing">
 			<div class="col-10 col-md-3">
 				<img src="https://teejaebcalinao.gitlab.io/samson-art-portfolio/assets/images/art.jpg" class="img-fluid rounded-circle">
 			</div>
@@ -68,17 +71,17 @@
 					<i class="fa-solid fa-at"></i> <span>artkevinsamson@gmail.com</span>
 				</p>
 				<div class="d-flex">
-					<a class="nav-link active" aria-current="page" href="#">
+					<a class="nav-link text-white" aria-current="page" href="#">
 						<i class="fa-brands fa-facebook-square fa-xl"></i>
 					</a>
-					<a class="nav-link active" aria-current="page" href="#">
+					<a class="nav-link text-white" aria-current="page" href="#">
 						<i class="fa-brands fa-linkedin fa-xl"></i>
 					</a>
 				</div>
 			</div>
 		</div>
 		<div class="row my-5 pt-lg-5 text-white">
-			<h2 class="mt-3 mb-3 text-center">About Me</h2>	
+			<h2 class="mt-3 mb-5 text-center">About Me</h2>	
 			<h3 class="text-center mb-5">Work Experience</h3>		
 		</div>
 		<div class="row mt-5 flex-column justify-content-center align-items-center text-white">
@@ -264,7 +267,7 @@
 		</div>
 		<div class="row justify-content-center mt-md-4 pb-5 pt-4">
 			<div class="col-md-4 mx-3 text-white text-center">
-				<div class="card">
+				<div class="card left-card">
 					<div class="card-header">
 						2009 - 2011
 					</div>
@@ -287,7 +290,7 @@
 			</div>
 
 			<div class="col-md-4 mt-4 mt-md-0 mx-3 text-white text-center">
-				<div class="card">
+				<div class="card right-card">
 					<div class="card-header">
 						2007 - 2009
 					</div>
@@ -308,11 +311,101 @@
 			</div>
 		</div>
 		<!-- end of education -->
-		<div class="row my-5 pt-lg-5 text-white">
-			<h2 class="mt-3 mb-3 text-center">Skills</h2>	
-			<h3 class="text-center mb-5">Office Skills</h3>		
+		<div class="row mt-5 mb-5 pt-lg-5 text-white justify-content-center">
+			<h2 class="mt-3 mb-5 text-center">Skills</h2>	
+			<div class="row justify-content-center">
+				<div class="my-2 mx-1 col-md-4 mx-3 card right-card">
+					<h3 class="text-center mt-4 mb-3 mb-md-5">MS Office</h3>			
+					<div class="row align-items-center my-3 ">
+						<div class="col-3 mx-0">
+							<img src="./images/ward.jpg" class="img-fluid rounded-circle">			
+						</div>
+						<div class="col-8 mx-0">
+							<h5>Microsoft Word</h5>					
+						</div>
+					</div>
+					<div class="row align-items-center my-3">
+						<div class="col-3 mx-0">
+							<img src="./images/ppt1.png" class="img-fluid rounded-circle">			
+						</div>
+						<div class="col-8 mx-0">
+							<h5>Microsoft Powerpoint</h5>					
+						</div>
+					</div>
+					<div class="row align-items-center my-3">
+						<div class="col-3 mx-0">
+							<img src="./images/xll.jpg" class="img-fluid rounded-circle">			
+						</div>
+						<div class="col-8 mx-0">
+							<h5>Microsoft Excel</h5>					
+						</div>
+					</div>
+					<div class="row align-items-center my-3">
+						<div class="col-3 mx-0">
+							<img src="./images/pub.png" class="img-fluid rounded-circle">			
+						</div>
+						<div class="col-8 mx-0">
+							<h5>Microsoft Publisher</h5>					
+						</div>
+					</div>
+				</div>
+				<div class="my-2 mx-1 col-md-4 mx-3 card left-card">
+					<h3 class="text-center mt-4 mb-3 mb-md-5">Creative Editing</h3>			
+					<div class="row align-items-center my-3">
+						<div class="col-3 mx-0">
+							<img src="./images/corl.jpg" class="img-fluid">		
+						</div>
+						<div class="col-8 mx-0">
+							<h5>Corel Video Editing</h5>					
+						</div>
+					</div>
+					<div class="row align-items-center my-3">
+						<div class="col-3 mx-0">
+							<img src="./images/pr.png" class="img-fluid">		
+						</div>
+						<div class="col-8 mx-0">
+							<h5>Adobe Premiere</h5>					
+						</div>
+					</div>
+					<div class="row align-items-center my-3">
+						<div class="col-3 mx-0">
+							<img src="./images/svl.png" class="img-fluid">			
+						</div>
+						<div class="col-8 mx-0">
+							<h5>Sony Vegas</h5>					
+						</div>
+					</div>
+					<div class="row align-items-center my-3">
+						<div class="col-3 mx-0">
+							<img src="./images/ps.png" class="img-fluid">		
+						</div>
+						<div class="col-8 mx-0">
+							<h5>Adobe Photoshop</h5>					
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
+	<!-- end of container -->
+	<footer class="text-center frost text-white pt-4 pb-3 mt-5">
+		<h6>Art Kevin Samson</h6>
+		<p class="mt-1">CSR/TSR/VA</p>
+		<p class=" mb-1">
+			<i class="fa-solid fa-phone"></i> <span>+639651645229</span>
+		</p>
+		<p>
+			<i class="fa-solid fa-at"></i> <span>artkevinsamson@gmail.com</span>
+		</p>
+		<div class="d-flex justify-content-center">
+			<a class="nav-link text-white" aria-current="page" href="#">
+				<i class="fa-brands fa-facebook-square fa-xl"></i>
+			</a>
+			<a class="nav-link text-white" aria-current="page" href="#">
+				<i class="fa-brands fa-linkedin fa-xl"></i>
+			</a>
+		</div>
+	</footer>
 
 	<!-- bs js -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
