--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark sticky-top" id="navTop">
 	  <div class="container-fluid">
-	    <a class="navbar-brand d-lg-none" href="#">Navbar</a>
+	    <a class="navbar-brand d-lg-none" href="#">Art Samson</a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
@@ -34,7 +34,9 @@
 	      	  </a>
 	     	  <a class="navbar-brand d-none d-lg-inline mx-3" href="#">Art</a>
 	          <a class="nav-link active" aria-current="page" href="#">Home</a>
-	          <a class="nav-link" href="#">About</a>
+	          <a class="nav-link" href="#exp">About</a>
+	          <a class="nav-link" href="#ed">Education</a>
+	          <a class="nav-link" href="#skills">Skills</a>
 	      	  <div class="d-lg-none d-flex justify-content-center">
 	      	  	<a class="nav-link mx-3" aria-current="page" href="#">
 	      	  		<i class="fa-brands fa-linkedin"></i>
@@ -49,19 +51,19 @@
 	</nav>
 
 	<div class="container pb-5">
-		<div class="row mb-5 py-5 justify-content-center align-items-center" id="landing">
+		<div class="row mb-5 py-md-5 justify-content-center align-items-center" id="landing">
 			<div class="col-10 col-md-3">
 				<img src="https://teejaebcalinao.gitlab.io/samson-art-portfolio/assets/images/art.jpg" class="img-fluid rounded-circle">
 			</div>
 			<div class="col-md-6 text-white text-center text-md-start">
-				<h1 class="mt-3">Art Kevin Samson</h1>
+				<h1 class="mt-3 display-3">Art Kevin Samson</h1>
 				<h4 class=" mt-1">CSR/TSR/VA</h4>
 				<p class=" mt-3">
-					I wish practice and maximize my
+					I wish to practice and maximize my
 					creative skills and to further
 					enhance my knowledge,
-					which would give benefits
-					and profits to the company I
+					which would benefit
+					and profit the company I
 					am working with.
 				</p>
 				<p class=" mb-1">
@@ -70,7 +72,15 @@
 				<p class="">
 					<i class="fa-solid fa-at"></i> <span>artkevinsamson@gmail.com</span>
 				</p>
-				<div class="d-flex">
+				<div class="d-none d-md-flex">
+					<a class="nav-link text-white" aria-current="page" href="#">
+						<i class="fa-brands fa-facebook-square fa-xl"></i>
+					</a>
+					<a class="nav-link text-white" aria-current="page" href="#">
+						<i class="fa-brands fa-linkedin fa-xl"></i>
+					</a>
+				</div>
+				<div class="d-flex justify-content-center d-md-none">
 					<a class="nav-link text-white" aria-current="page" href="#">
 						<i class="fa-brands fa-facebook-square fa-xl"></i>
 					</a>
@@ -81,10 +91,10 @@
 			</div>
 		</div>
 		<div class="row my-5 pt-lg-5 text-white">
-			<h2 class="mt-3 mb-5 text-center">About Me</h2>	
-			<h3 class="text-center mb-5">Work Experience</h3>		
+			<h2 class="mt-3 mb-5 text-center display-5">About Me</h2>	
+			<h3 class="text-center mb-5" id="exp">Work Experience</h3>		
 		</div>
-		<div class="row mt-5 flex-column justify-content-center align-items-center text-white">
+		<div class="row mt-5 flex-column justify-content-center align-items-center text-white" >
 				<div class="col-md-6 text-white">
 					<div class="card right-card text-center">
 					  <div class="card-header pt-3">
@@ -262,7 +272,7 @@
 				</div>
 		</div>
 		<!-- end timeline -->
-		<div class="row mt-4 mb-md-3 pt-lg-5 text-white">
+		<div class="row mt-4 mb-md-3 pt-lg-5 text-white"  id="ed">
 			<h3 class="mt-3 text-center">Education</h3>		
 		</div>
 		<div class="row justify-content-center mt-md-4 pb-5 pt-4">
@@ -312,10 +322,10 @@
 		</div>
 		<!-- end of education -->
 		<div class="row mt-5 mb-5 pt-lg-5 text-white justify-content-center">
-			<h2 class="mt-3 mb-5 text-center">Skills</h2>	
-			<div class="row justify-content-center">
+			<h2 class="mt-3 mb-5 text-center display-5">Skills</h2>	
+			<div class="row justify-content-center" id="skills">
 				<div class="my-2 mx-1 col-md-4 mx-3 card right-card">
-					<h3 class="text-center mt-4 mb-3 mb-md-5">MS Office</h3>			
+					<h3 class="text-center mt-4 mb-4 mb-md-5">MS Office</h3>			
 					<div class="row align-items-center my-3 ">
 						<div class="col-3 mx-0">
 							<img src="./images/ward.jpg" class="img-fluid rounded-circle">			
@@ -350,7 +360,7 @@
 					</div>
 				</div>
 				<div class="my-2 mx-1 col-md-4 mx-3 card left-card">
-					<h3 class="text-center mt-4 mb-3 mb-md-5">Creative Editing</h3>			
+					<h3 class="text-center mt-4 mb-4 mb-md-5">Creative Editing</h3>			
 					<div class="row align-items-center my-3">
 						<div class="col-3 mx-0">
 							<img src="./images/corl.jpg" class="img-fluid">		
